[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "tq"
dynamic = ["version"]
authors = [
  { name="Cychih", email="michael66230@gmail.com" },
]
description = "Some cute utilties for my other projects"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]


[tool.hatch.version]
path = "tq/__init__.py"


[project.scripts]
tq = "tq:main"


[project.urls]
Homepage = "https://github.com/pi314/tq"


[tool.coverage.run]
branch = true
source = ["tq/"]
command_line = "-m unittest --verbose"


[tool.coverage.report]
omit = [
    "test_*.py",
    "__init__.py",
    "__main__.py",
    ]
